// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
     expense 
    totaling 
    $2.34
  </h3>
</div>
`;

exports[`should render correctly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
     
     expenses 
    totaling 
    $3,456.78
  </h3>
</div>
`;
